[package]
name = "lock-smith"
version = "0.0.1"
authors = ["Gaurav Kumar <gauravsingh12341@gmail.com>"]
repository = "https://github.com/gausk/lock-smith-rs"
homepage = "https://github.com/gausk/lock-smith-rs"
readme = "README.md"
keywords = ["password", "secure"]
categories = ["command-line-utilities"]
license = "MIT"
description = "A CLI based Password Manager"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"